# origem_ps

./: .gitignore  CMakeLists.txt  README.md  main.cpp  origem_ps.cpp
include/: bateria.hpp  cp.hpp  defines.hpp  etb.hpp  moto.hpp
src/libs/: bateria.cpp  cp.cpp  etb.cpp  moto.cpp
